[gd_scene load_steps=2 format=3 uid="uid://cc0dot71nvqlm"]

[ext_resource type="Script" uid="uid://doffq6s7gnxpj" path="res://Scripts/MainNode.gd" id="1_r150o"]

[node name="Main" type="Node2D"]
script = ExtResource("1_r150o")

[node name="TextEdit" type="TextEdit" parent="."]
offset_right = 544.0
offset_bottom = 142.0

[node name="ButtonBF4" type="Button" parent="."]
offset_left = 4.0
offset_top = 151.0
offset_right = 99.0
offset_bottom = 202.0
text = "BF 4"

[node name="ButtonBF8" type="Button" parent="."]
offset_left = 113.0
offset_top = 152.0
offset_right = 208.0
offset_bottom = 203.0
text = "BF 8"

[node name="ButtonBF16" type="Button" parent="."]
offset_left = 220.0
offset_top = 150.0
offset_right = 315.0
offset_bottom = 201.0
text = "BF 16"

[node name="ButtonBF22" type="Button" parent="."]
offset_left = 330.0
offset_top = 150.0
offset_right = 425.0
offset_bottom = 201.0
text = "BF 22"

[node name="ButtonBF42" type="Button" parent="."]
offset_left = 439.0
offset_top = 151.0
offset_right = 534.0
offset_bottom = 202.0
text = "BF 42"

[connection signal="pressed" from="ButtonBF4" to="." method="_on_button_pressed_bf_4"]
[connection signal="pressed" from="ButtonBF8" to="." method="_on_button_pressed_bf_8"]
[connection signal="pressed" from="ButtonBF16" to="." method="_on_button_pressed_bf_16"]
[connection signal="pressed" from="ButtonBF22" to="." method="_on_button_pressed_bf_22"]
[connection signal="pressed" from="ButtonBF42" to="." method="_on_button_pressed_bf_42"]
